# reply-ai-agent-challenge

./: .env.example  .gitignore  requirements.txt  sitecustomize.py
reply_challenge/: README.md  __init__.py  output.txt  pyproject.toml  requirements.txt  sitecustomize.py
reply_challenge/reply_challenge/: __init__.py
reply_challenge/src/reply_challenge/: crew.py  main.py  tools.py
reply_challenge/src/reply_challenge/config/: agents.yaml  tasks.yaml
